🆕 feat: Add DiaryCardDateFormat

--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -14,7 +14,7 @@
             <MListItemContent>
                 <div class="d-flex align-center">
                     <span class="text--secondary mr-3" style="font-size:1.1rem;">
-                        @(Time.ToString("MM/dd"))
+                        @(Time.ToString(DateFormat))
                     </span>
                     @if (Icon)
                     {
