--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -8,6 +8,7 @@
                    Class="@CardClass"
                    Privacy="ShowPrivacy"
                    Icon="ShowIcon"
+                   DateFormat="@DateFormat"
                    OnTag="HandleTag"
                    OnCopy="HandleCopy"
                    OnDelete="OpenDeleteDialog"
