🐛 fix(TagPage): The diary under tag is sorted incorrectly and the diary is not detailed enough

--- a/SwashbucklerDiary/Pages/TagPage.razor
+++ b/SwashbucklerDiary/Pages/TagPage.razor
@@ -10,17 +10,6 @@
                    Value="Diaries" />
 </ScrollContainer>
 
-<FabTransition>
-    <MButton Color="black"
-             Class="mb-15 mb-sm-0"
-             Dark
-             Bottom
-             Right
-             Fixed
-             OnClick="NavigateToWrite"
-             Fab>
-        <MIcon>
-            mdi-pencil
-        </MIcon>
-    </MButton>
-</FabTransition>
+<MyFloatButton Icon="mdi-pencil"
+               OnClick="NavigateToWrite">
+</MyFloatButton>
