💄 style: update style

--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -16,7 +16,7 @@
         <MButton Icon="true"
                  OnClick="InsertTimestamp">
             <MIcon>
-                mdi-timer-plus-outline
+                mdi-clock-outline
             </MIcon>
         </MButton>
 
