--- a/SwashbucklerDiary/Components/DialogComponents/PreviewImageDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PreviewImageDialog.razor
@@ -8,18 +8,20 @@
     <MCard Class="fill-height theme-element"
            Ripple="false"
            OnClick="()=>InternalValueChanged(false)">
-        <MImage Src="@Src"
-                Width="@("100%")"
-                Height="@("100%")"
-                Contain="true">
-            <PlaceholderContent>
-                <MRow Class="fill-height ma-0"
-                      Align="@AlignTypes.Center"
-                      Justify="@JustifyTypes.Center">
-                    <MProgressCircular Indeterminate="true">
-                    </MProgressCircular>
-                </MRow>
-            </PlaceholderContent>
-        </MImage>
+        <div class="py-sm-10 fill-height">
+            <MImage Src="@Src"
+                    Width="@("100%")"
+                    Height="@("100%")"
+                    Contain="true">
+                <PlaceholderContent>
+                    <MRow Class="fill-height ma-0"
+                          Align="@AlignTypes.Center"
+                          Justify="@JustifyTypes.Center">
+                        <MProgressCircular Indeterminate="true">
+                        </MProgressCircular>
+                    </MRow>
+                </PlaceholderContent>
+            </MImage>
+        </div>
     </MCard>
 </MMDialog>
