--- a/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
+++ b/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
@@ -1,6 +1,6 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-<div @ref="element"
+<div @ref="Ref"
 @oncontextmenu="OnContextmenu"
      id="@Id"
      class="my-scroll-container @(Class)"
