--- a/SwashbucklerDiary/Components/MyComponents/Swiper/SwiperTabItem.razor
+++ b/SwashbucklerDiary/Components/MyComponents/Swiper/SwiperTabItem.razor
@@ -1,6 +1,6 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-<div class="swiper-slide">
+<div @ref="Ref" id="@Id" class="swiper-slide">
     <MContainer Class="my-container"
                 Fluid="true">
         @ChildContent
