--- a/SwashbucklerDiary/Pages/Mine/Settings/AlertSettingPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/AlertSettingPage.razor
@@ -7,17 +7,36 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MSubheader>
-       @(I18n.T("Alert.AlertTimeout"))：@(timeout / 1000) s
-    </MSubheader>
-    <MContainer Class="ma-0 py-0">
-        <MSlider Value="timeout"
-                 ValueChanged="UpdateAlertTimeout"
-                 TValue="int"
-                 Min="1000"
-                 Max="5000"
-                 Step="1000">
-        </MSlider>
-    </MContainer>
+    <MCard Class="setting-card"
+           Elevation="0"
+           Rounded="@("lg")">
+        <MList>
+            <MListItem OnClick="()=>ShowTimeout=true">
+                <MListItemIcon>
+                    <MIcon Class="list-item-icon">
+                        mdi-timer-outline
+                    </MIcon>
+                </MListItemIcon>
+                <MListItemContent>
+                    @(I18n.T("Alert.AlertTimeout"))
+                </MListItemContent>
+                <MListItemContent Class="setting-state">
+                    <MListItemSubtitle>
+                        @(Timeout.ToString() + "s")
+                    </MListItemSubtitle>
+                </MListItemContent>
+                <MListItemAction>
+                    <MIcon>mdi-chevron-right</MIcon>
+                </MListItemAction>
+            </MListItem>
+        </MList>
+    </MCard>
+
 </ScrollContainer>
 
+<SelectIconDialog @bind-Value="ShowTimeout"
+@bind-Item="@Timeout"
+                  Title="@(I18n.T("Alert.AlertTimeout"))"
+                  Items="Timeouts"
+                  Text="@(item=>item.Key + "s")">
+</SelectIconDialog>
