♻️ refactor(MinePage): Optimize loading user name and signature

--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -44,10 +44,10 @@
                         </MListItemAvatar>
                         <MListItemContent>
                             <MListItemTitle Class="text-h6 font-weight-bold">
-                                @(string.IsNullOrEmpty(UserName) ? I18n.T("AppName") : UserName)
+                                @(UserName)
                             </MListItemTitle>
                             <MListItemSubtitle>
-                                @(string.IsNullOrEmpty(Sign) ? I18n.T("Mine.Sign") : Sign)
+                                @(Sign)
                             </MListItemSubtitle>
                         </MListItemContent>
                         <MListItemAction Style="align-self:unset;">
