--- a/SwashbucklerDiary/Pages/Mine/Settings/AlertSettingPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/AlertSettingPage.razor
@@ -10,33 +10,56 @@
     <MCard Class="setting-card"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
-            <MListItem OnClick="()=>ShowTimeout=true">
-                <MListItemIcon>
-                    <MIcon Class="list-item-icon">
-                        mdi-timer-outline
-                    </MIcon>
-                </MListItemIcon>
-                <MListItemContent>
-                    @(I18n.T("Alert.AlertTimeout"))
-                </MListItemContent>
-                <MListItemContent Class="setting-state">
-                    <MListItemSubtitle>
-                        @(Timeout.ToString() + "s")
-                    </MListItemSubtitle>
-                </MListItemContent>
-                <MListItemAction>
-                    <MIcon>mdi-chevron-right</MIcon>
-                </MListItemAction>
-            </MListItem>
-        </MList>
+        <MListItem OnClick="()=>ShowTimeout=true">
+            <MListItemIcon>
+                <MIcon Class="list-item-icon">
+                    mdi-timer-outline
+                </MIcon>
+            </MListItemIcon>
+            <MListItemContent>
+                @(I18n.T("Setting.Display.Alert.AlertTimeout.Name"))
+            </MListItemContent>
+            <MListItemContent Class="setting-state">
+                <MListItemSubtitle>
+                    @(Timeout.ToString() + "s")
+                </MListItemSubtitle>
+            </MListItemContent>
+            <MListItemAction>
+                <MIcon>mdi-chevron-right</MIcon>
+            </MListItemAction>
+        </MListItem>
+    </MCard>
+
+    <MCard Class="setting-card"
+           Elevation="0"
+           Rounded="@("lg")">
+        <MListItem>
+            <MListItemIcon>
+                <MIcon Class="list-item-icon">
+                    mdi-trophy-outline
+                </MIcon>
+            </MListItemIcon>
+            <MListItemContent>
+                @(I18n.T("Setting.Display.Alert.Achievement.Name"))
+            </MListItemContent>
+            <MListItemAction>
+                <MSwitch @bind-Value="AchievementsAlert"
+                         TValue="bool"
+                         OnChange="SettingChange(SettingType.AchievementsAlert)"
+                         Dense="true"
+                         Inset="true"
+                         Color="white"
+                         TrackColor="@MSwitchTrackColor(AchievementsAlert)">
+                </MSwitch>
+            </MListItemAction>
+        </MListItem>
     </MCard>
 
 </ScrollContainer>
 
 <SelectIconDialog @bind-Value="ShowTimeout"
 @bind-Item="@Timeout"
-                  Title="@(I18n.T("Alert.AlertTimeout"))"
+                  Title="@(I18n.T("Setting.Display.Alert.AlertTimeout.Name"))"
                   Items="Timeouts"
                   Text="@(item=>item.Key + "s")">
 </SelectIconDialog>
