🆕 feat(LAN): Add LAN Setting

--- a/SwashbucklerDiary/Pages/Mine/Backups/WebDAVBackups.razor
+++ b/SwashbucklerDiary/Pages/Mine/Backups/WebDAVBackups.razor
@@ -9,7 +9,7 @@
         <MListItem OnClick="()=>ShowConfig=true">
             <MListItemIcon>
                 <MIcon Class="list-item-icon">
-                    mdi-cog-transfer-outline
+                    mdi-cog-sync-outline
                 </MIcon>
             </MListItemIcon>
 
