--- a/SwashbucklerDiary/Pages/Mine/Export/LANTransfer.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LANTransfer.razor
@@ -29,3 +29,9 @@
         }
     </MList>
 </MCard>
+
+<LANConfigDialog @bind-Value="ShowConfig"
+                 Form="configModel"
+                 OnOK="SaveConfig"
+                 OnReset="Reset">
+</LANConfigDialog>
