--- a/SwashbucklerDiary/Components/DialogComponents/ErrorDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/ErrorDialog.razor
@@ -2,22 +2,37 @@
 @namespace SwashbucklerDiary.Components
 
 <MDialog Value="true"
-         Persistent
+         Persistent="true"
          MaxWidth="420">
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             <MIcon Class="error--text mr-2">
                 mdi-close-circle-outline
             </MIcon>
             @(I18n.T("ErrorHandle.Title"))
         </MCardTitle>
-        <MCardText>
+        <MCardText Class="pb-0">
             @(I18n.T("ErrorHandle.Content"))
         </MCardText>
+        <MCardActions>
+            <MSpacer></MSpacer>
+            <MButton Text="true"
+                     Color="red"
+                     OnClick="Quit">
+                @(I18n.T("Share.Quit"))
+            </MButton>
+        </MCardActions>
     </MCard>
 </MDialog>
 
-@code{
+@code {
     [Inject]
     private II18nService I18n { get; set; } = default!;
+    [Inject]
+    private IPlatformService PlatformService { get; set; } = default!;
+
+    private void Quit()
+    {
+        PlatformService.QuitApp();
+    }
 }
