💄 style: update style

--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -28,7 +28,7 @@
                     OnClick="@(()=>To("user"))">
                  <MList>
                      <MListItem ThreeLine>
-                        <MListItemAvatar Class="ml-sm-2 ml-md-4"
+                        <MListItemAvatar Class="ml-sm-2 ml-md-4 mr-md-6"
                                          Rounded="@("lg")"
                                          Size="70">
                             <MImage Src="@(Avatar)">
