♻️ refactor(DiaryCard): Optimize text content

--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -46,7 +46,7 @@
         <MListItem ThreeLine>
             <MListItemContent>
                 <div class="my-diary-card-title">
-                    @Title
+                    @(Title ?? I18n.T("Diary.Untitled"))
                 </div>
                 <MListItemSubtitle>
                     @Text
