💄 style: update style

--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -1,6 +1,11 @@
 ﻿@page "/write"
 @inherits PageComponentBase
 
+@if (EnableMarkdown)
+{
+    <link href="css/extend/masa-blazor-extend-enqueued-snackbars-write.css" rel="stylesheet" />
+}
+
 <MAppBar App="true"
          Elevation="0">
     <ChildContent>
