--- a/SwashbucklerDiary/Pages/Mine/Export/LANTransfer.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LANTransfer.razor
@@ -1,7 +1,8 @@
 ﻿@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MCard Elevation="0"
+<MCard Class="setting-card"
+       Elevation="0"
        Rounded="@("lg")">
     <MList>
         @foreach (var item in DynamicLists)
@@ -28,6 +29,26 @@
             }
         }
     </MList>
+</MCard>
+
+<MCard Class="setting-card"
+       Elevation="0"
+       Rounded="@("lg")">
+    <MListItem OnClick="()=>ShowConfig=true">
+        <MListItemIcon>
+            <MIcon Class="list-item-icon">
+                mdi-cog-transfer-outline
+            </MIcon>
+        </MListItemIcon>
+        <MListItemContent>
+            <MListItemTitle>
+                @(I18n.T("Export.LAN.Config.Name"))
+            </MListItemTitle>
+        </MListItemContent>
+        <MListItemAction>
+            <MIcon>mdi-chevron-right</MIcon>
+        </MListItemAction>
+    </MListItem>
 </MCard>
 
 <LANConfigDialog @bind-Value="ShowConfig"
