🆕 feat(ReadPage MinePage): add PreviewImage

--- a/SwashbucklerDiary/Components/MyComponents/MarkdownPreview.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MarkdownPreview.razor
@@ -2,3 +2,7 @@
 
 <div @ref="element" class="@Class" style="@Style">
 </div>
+
+<PreviewImageDialog @bind-Value="ShowPreviewImage"
+                    Src="@PreviewImageSrc">
+</PreviewImageDialog>
