♻️ refactor(Image): Optimize Windows Image

--- a/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
@@ -3,7 +3,7 @@
 <div class="@WrapClass">
     <MMarkdown @ref="MMarkdown"
                Value="@Value"
-               ValueChanged="InternalValueChanged"
+               ValueChanged="ValueChanged"
                Class="@Class"
                Style="padding-top:10px"
                Options="_options"
